--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Common\Models\" />
     <Folder Include="UseCase\V2\" />
   </ItemGroup>
 </Project>
